--- a/microserver-kernel/launcher/pom.xml
+++ b/microserver-kernel/launcher/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>launcher</artifactId>
     <packaging>jar</packaging>
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.11</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
