--- a/microserver-kernel/pom.xml
+++ b/microserver-kernel/pom.xml
@@ -7,6 +7,15 @@
     <packaging>pom</packaging>
     <name>microserver-kernel</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <profiles>
         <profile>
             <id>default</id>
