--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-*target/
-*.idea/
+# ignore Intellij-IDEA files
+*.iml
+*.ipr
+*.iws
+*.classpath
+*.settings
+*.project
+*.idea
+.DS_Store
+
+# ignore logs
+*.log
+
+# ignore target directories
+target/
